# HTML-generator

./: .gitignore  MainWidget.py  README.md  constants.py  html.py  html.ui  html_tags.py  main.py  pyproject.toml  ui_gen.py  ui_html_gen.py  utils.py
designed_ui/: designed_interface.py  designed_interface.ui
html_base/: constants.py  html_tags.py
report/: 21_VMz_Mayasov_Khaleev_SHPPO.docx
source/: app.py  html_utils.py  utils.py
src/: html.ui
templates/: 111.html  TEMP.html  blue_left_headers_borders(2-6).html  green_center_headers(2-6).html  red_right_headers(1-6).html  temp1.html  temp_border.html
uml/: app_uml  tags_uml  utils_uml
